# challenge-2/app/Http/Controllers/Controller.php
@@ -9,9 +9,12 @@ use Illuminate\Routing\Controller as BaseController;
 
 /**
  * @OA\Server(url="http://localhost:8100/api"),
- * @OA\Info(title="Challenge 2", version="0.0.1")
+ * @OA\Info(title="Challenge-Backend", version="0.0.1",
  *
+ *     @OA\Contact(email="danilo.britoxd@hotmail.com", name="Danilo Brito"),
  * )
+ *
+ *
  */
 class Controller extends BaseController
 {
