# challenge-2/storage/api-docs/api-docs.yaml
@@ -1,6 +1,9 @@
 openapi: 3.0.0
 info:
-  title: 'Challenge 2'
+  title: Challenge-Backend
+  contact:
+    name: 'Danilo Brito'
+    email: danilo.britoxd@hotmail.com
   version: 0.0.1
 servers:
   -
@@ -255,5 +258,10 @@ paths:
       security:
         -
           BearerAuth: []
+components:
+  securitySchemes:
+    BearerAuth:
+      type: http
+      scheme: bearer
 security:
   - []
